# DnsSpoofer

./: BUILD.md  README.md  meson.build
app/: README  meson.build  meson_options.txt
app/dpdk/: dnsSock.c  meson.build
app/ebpf/: meson.build
app/posix/: dnsSock.c  meson.build
app/test/: meson.build  test1.c
include/: dnsSpoof.h  meson.build
lib/: meson.build
lib/include/: dnsSpoofer_common.h
lib/src/: dnsSpoofer_config.c  meson.build
